updated project photos and fixed spacing on project section at desktop widths

--- a/src/SCSS/components/projects.scss
+++ b/src/SCSS/components/projects.scss
@@ -4,7 +4,7 @@
   justify-content: space-evenly;
   flex-wrap: wrap;
   margin: 5rem auto;
-  width: 45%;
+  width: 60%;
   border-bottom: 1px solid $color-main-nav;
 
   @media (max-width: 500px) {
@@ -87,7 +87,7 @@
   }
 
   img {
-    max-width: 100%;
+    width: 100%;
     height: 65%;
     border-radius: 10px 10px 0px 0px;
   }
